# play-grocery

./: Cargo.toml  README.md  docs.md  plan.md
.github/workflows/: build-deploy-catalog-service.yml  build-deploy-sales-service.yml
catalog-service/: .env  Cargo.toml  Dockerfile  build.rs
catalog-service/src/: .env  main.rs
catalog-service/src/api/: error_handler.rs  mod.rs  product_handlers.rs
catalog-service/src/db/: product_repo.rs
catalog-service/src/db/migrations/: 20241102152700_init.sql
catalog-service/src/domain/: entities.rs  mod.rs  models.rs
catalog-service/src/grpc/: error_helper.rs  mod.rs  object_mapper.rs  product_service.rs  proto.rs
order-service/: Cargo.toml
order-service/src/: main.rs
product-service/: .env  Cargo.toml
product-service/src/: main.rs
product-service/src/api/: mod.rs  models.rs  product_handlers.rs
product-service/src/db/: database.rs  mod.rs  product-repo.rs  product_repo.rs
product-service/src/db/migrations/: 20241027201920_init.sql
product-service/src/domain/: entities.rs
product-service/src/grpc/: error_helper.rs  mod.rs  object_mapper.rs  product_grpc.rs  product_service.rs
product-service/src/http/: error_handler.rs  product_handlers.rs  shared_state.rs
proto/: product.proto
raw/: grocery.postman_collection.json
sales-service/: .env  Cargo.toml  Dockerfile  build.rs
sales-service/src/: lib.rs  main.rs
sales-service/src/api/: error_handler.rs  mod.rs  order_handlers.rs
sales-service/src/db/: mod.rs  order_repo.rs  type_mapper.rs
sales-service/src/db/migrations/: mig_000001.sql
sales-service/src/domain/: entities.rs  models.rs
sales-service/src/grpc/: mod.rs  object_mapper.rs  product_service.rs  proto.rs
sales-service/tests/: get_orders_test.rs
sales-service/tests/common/: mod.rs
