[package]
name = "catalog-service"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true