[package]
name = "product-service"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
anyhow = "1.0"
axum="0.7"
tokio={ version = "1.41",  features = ["full"] } 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
rust_decimal="1.36"