[package]
name = "sales-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio={ version = "1.41",  features = ["full"] } 
axum="0.7"
anyhow = "1.0"
dotenv = "0.15"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }


