[package]
name = "sales-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "sales_service" 
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
dotenv.workspace = true
tokio-postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true


[dev-dependencies]
mockall.workspace = true
